// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`´Probar la clase de citas Actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "11-03-2020",
      "hora": "10:30",
      "id": 1604401797128,
      "mascota": "Coco 2",
      "propietario": "Aaron",
      "sintomas": "No come",
      "telefono": "920889432",
    },
  ],
}
`;

exports[`´Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "11-03-2020",
      "hora": "10:30",
      "id": 1604401797128,
      "mascota": "Coco",
      "propietario": "Aaron",
      "sintomas": "No come",
      "telefono": "920889432",
    },
  ],
}
`;

exports[`´Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": Array [],
}
`;
